--- a/Codemate/package.json
+++ b/Codemate/package.json
@@ -20,6 +20,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.0",
     "react-scripts": "5.0.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
