--- a/Codemate/package.json
+++ b/Codemate/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.112",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "fs": "^0.0.1-security",
