--- a/Codemate/package.json
+++ b/Codemate/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
+    "markdown-it": "^14.1.0",
     "marked": "^14.1.2",
     "path": "^0.12.7",
     "react": "^18.3.1",
